# filmow2letterboxd

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  rustfmt.toml
.github/workflows/: build.yml  tag-release.yml  test.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: csvwriter.rs  filmowclient.rs  lib.rs  logging.rs  main.rs
src/clients/: filmow_client.rs  mod.rs
src/extractors/: mod.rs  movie_extractor.rs
src/fetchers/: mod.rs  watched_list_fetcher.rs  watchlist_fetcher.rs
src/filmowclient/: movie.rs  movieextractor.rs
src/model/: movie.rs
src/persisters/: csv_writer.rs  mod.rs
tests/: ete_test.rs  integration_test.rs
tests/resources/: expected_watched_list_azael.csv  expected_watchlist_azael.csv
