[package]
name = "filmow2letterboxd"
version = "0.2.3"
authors = ["Lucas Meireles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
tokio = { version = "1.19.2", features = ["full"] }
select = "0.5.0"
csv = "1.1.6"
