[package]
name = "filmow2letterboxd"
version = "0.2.3"
authors = ["Lucas Meireles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
tokio = { version = "1.32.0", features = ["full"] }
select = "0.6.0"
csv = "1.2.2"
tokio-retry = "0.3.0"
log = "0.4.20"
env_logger = "0.11.2"
